--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-news-servlet-book</artifactId><version>1.4.0-SNAPSHOT</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-news-servlet-book</artifactId><version>1.4.0</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -51,7 +51,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-news-servlet.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-news-servlet.git</developerConnection>
 		<url>https://github.com/aoindustries/semanticcms-news-servlet</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-news-servlet-book-1.4.0</tag>
 	</scm>
 
 	<dependencyManagement>
