--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<tag>HEAD</tag>
 	</scm>
 
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/aoindustries/semanticcms-news-servlet/issues</url>
+	</issueManagement>
+
 	<profiles>
 		<profile>
 			<id>release</id>
