--- a/book/pom.xml
+++ b/book/pom.xml
@@ -39,7 +39,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<documented.shortTitle>Servlet</documented.shortTitle>
 		<documented.description>SemanticCMS newsfeeds in a Servlet environment.</documented.description>
 
-		<description.html><![CDATA[Documentation for <a target="_top" href="${project.url}">${documented.name}</a> in <a target="_top" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
+		<description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
 	</properties>
 
 	<name>SemanticCMS News Servlet² Book</name>
