--- a/pom.xml
+++ b/pom.xml
@@ -76,13 +76,13 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 								<link>https://aoindustries.com/ao-net-types/apidocs/</link>
 								<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 								<link>https://www.joda.org/joda-time/apidocs/</link>
-								<link>https://semanticcms.com/core/controller/apidocs/</link>
+								<!-- TODO: Once published: <link>https://semanticcms.com/core/controller/apidocs/</link> -->
 								<link>https://semanticcms.com/core/model/apidocs/</link>
-								<link>https://semanticcms.com/core/pages/apidocs/</link>
-								<link>https://semanticcms.com/core/pages/local/apidocs/</link>
+								<!-- TODO: Once published: <link>https://semanticcms.com/core/pages/apidocs/</link> -->
+								<!-- TODO: Once published: <link>https://semanticcms.com/core/pages/local/apidocs/</link> -->
 								<link>https://semanticcms.com/core/servlet/apidocs/</link>
 								<link>https://semanticcms.com/news/model/apidocs/</link>
-								<link>https://semanticcms.com/news/renderer/html/apidocs/</link>
+								<!-- TODO: Once published: <link>https://semanticcms.com/news/renderer/html/apidocs/</link> -->
 							</links>
 						</configuration>
 					</plugin>
